--- a/first page.html
+++ b/first page.html
@@ -1,13 +1,96 @@
-
-<!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>RESUME</title>
+<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="Calibri">
+<div>
+<br>
+<center><img src="PIC.jpeg" height="130px" border="2px";><br><br>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<font face="HP Simplified Light" color=""><b>CONTACT</b></font>
+</center>	
+<hr width="45%">
+<center>
+<img src="1.png" height=15px;> 8800816252<br>
+<img src="2.png" height=15px;> ggourisha2001@gmail.com<br> 
+<img src="3.jpg" height=15px;>Carnation 204 Green valley, Faridabad <br>
+<img src="4.png" height=15px border="white" ;>  Linkedin.com/gourisha
+</center>
+<br><br>
+
+<center><font face="HP Simplified Light" color=""><b>LANGUAGES KNOWN</b></font></center>
+<hr width="80%">
+<ul>
+	<li>English</li>
+	<li>Hindi</li>	
+</ul>
+
+<center><font face="HP Simplified Light" color=""><b>INTERESTS</b></font></center>
+<hr width="50%">
+<ul>
+	<li>Badminton</li>
+	<li>sketching</li>
+	<li>swimming</li>
+	<li>travelling</li>	
+</ul>
+</div>
+<div2>
+	<font face="HP Simplified Light" color="">
+	<h1 align="center">GOURISHA GOEL </h1>  
+</font>
+<hr width="20%" color="black">
+
+
+<font face="HP Simplified Light" size="5"><b>CAREER OBJECTIVE</b> </font><hr width="25%" color="black" align="left">
+<font size="3">
+Looking for a challenging role in a reputable organization to utilize my technical and design skills for the growth of the organization as well as to enhance my knowledge about new and emerging trends in the IT sector.<br></font><br>
+
+
+<font face="HP Simplified Light" size="5"><b>EDUCATION</b></font><hr width="20%" color="black" align="left">
+<table border=2 cellpadding="2" cellspacing="2" >
+  <tr align="center" bgcolor="#8c8c8c">
+    <th>Examination</th>
+    <th>Year </th>
+    <th>School/University</th>
+    <th>Grade</th>
+  </tr>
+  <tr align="center">
+    <td>Class XII(CBSE)</td>
+    <td>2019</td>
+    <td>Apeejay School, Faridabad</td>
+    <td>88%</td>
+  </tr>
+  <tr align="center">
+    <td>Class X(CBSE)</td>
+    <td>2017</td>
+    <td>Apeejay School, Faridabad</td>
+    <td>80%</td>
+  </tr>
+</table><br>
+
+
+<font face="HP Simplified Light" size="5"><b>SKILLS</b> </font><hr width="10%" color="black" align="left">
+<font size="3">
+<ul>
+	<li>Effective communication, leadership, adaptability, creativity, critical thinking</li>
+	<li>User interface designer, full stack developer, programming languages such as JAVA Script, C, HTML, PHP, CSS, Basic Python</li>
+</ul>
+</font>
+
+<font face="HP Simplified Light" size="5"><b>TECHNICAL AND EXTRA-CURRICULAR ACHIEVEMENTS</b></font><hr width="60%" color="black" align="left">
+<font size="3">
+	<ul>
+<li><b>Manav Rachna scholars</b> (2019)
+<li><b>ISR head </b>of Forest Rhinos Clan
+<li>Core team member, <b>MRIIRS Badminton Team </b>
+<li>1-day workshop,<b> database systems</b>  by Coding Ninjas (19th September 2019)
+<li>1-day workshop,<b> arduino </b> by MRU (2019) 
+</ul>
+</font>
+
+
+</div2>
 
 </body>
 </html>
