--- a/first page.html
+++ b/first page.html
@@ -6,16 +6,16 @@
 <body style="Calibri">
 <div>
 <br>
-<center><img src="PIC.jpeg" height="130px" border="2px";><br><br>
+<center><img src="pic.jpg" height="150px" border="2px";><br><br>
 
 <font face="HP Simplified Light" color=""><b>CONTACT</b></font>
 </center>	
 <hr width="45%">
 <center>
-<img src="1.png" height=15px;> 8800816252<br>
+<img src="1.png" height=15px;> 9876543210<br>
 <img src="2.png" height=15px;> ggourisha2001@gmail.com<br> 
-<img src="3.jpg" height=15px;>Carnation 204 Green valley, Faridabad <br>
-<img src="4.png" height=15px border="white" ;>  Linkedin.com/gourisha
+<img src="3.png" height=15px;> github.com/gourisha-26<br>
+<img src="4.png" height=15px border="white" ;> Linkedin.com/gourisha
 </center>
 <br><br>
 
@@ -30,17 +30,17 @@
 <hr width="50%">
 <ul>
 	<li>Badminton</li>
-	<li>sketching</li>
-	<li>swimming</li>
-	<li>travelling</li>	
+	<li>Sketching</li>
+	<li>Swimming</li>
+	<li>Listening Music</li>	
 </ul>
 </div>
+
 <div2>
 	<font face="HP Simplified Light" color="">
 	<h1 align="center">GOURISHA GOEL </h1>  
 </font>
 <hr width="20%" color="black">
-
 
 <font face="HP Simplified Light" size="5"><b>CAREER OBJECTIVE</b> </font><hr width="25%" color="black" align="left">
 <font size="3">
@@ -49,6 +49,7 @@ Looking for a challenging role in a reputable organization to utilize my technic
 
 <font face="HP Simplified Light" size="5"><b>EDUCATION</b></font><hr width="20%" color="black" align="left">
 <table border=2 cellpadding="2" cellspacing="2" >
+  <font size="3">
   <tr align="center" bgcolor="#8c8c8c">
     <th>Examination</th>
     <th>Year </th>
@@ -67,6 +68,19 @@ Looking for a challenging role in a reputable organization to utilize my technic
     <td>Apeejay School, Faridabad</td>
     <td>80%</td>
   </tr>
+  <tr align="center">
+    <td>1st Semester</td>
+    <td>College Board</td>
+    <td>MRIIRS</td>
+    <td>92%</td>
+  </tr>
+  <tr align="center">
+    <td>2nd Semester</td>
+    <td>College Board</td>
+    <td>MRIIRS</td>
+    <td>89%</td>
+  </tr>
+</font>
 </table><br>
 
 
@@ -81,7 +95,7 @@ Looking for a challenging role in a reputable organization to utilize my technic
 <font face="HP Simplified Light" size="5"><b>TECHNICAL AND EXTRA-CURRICULAR ACHIEVEMENTS</b></font><hr width="60%" color="black" align="left">
 <font size="3">
 	<ul>
-<li><b>Manav Rachna scholars</b> (2019)
+<li><b>Manav Rachna scholars</b> (2019-2021)
 <li><b>ISR head </b>of Forest Rhinos Clan
 <li>Core team member, <b>MRIIRS Badminton Team </b>
 <li>1-day workshop,<b> database systems</b>  by Coding Ninjas (19th September 2019)
