--- a/first page.html
+++ b/first page.html
@@ -99,7 +99,9 @@ Looking for a challenging role in a reputable organization to utilize my technic
 <li><b>ISR head </b>of Forest Rhinos Clan
 <li>Core team member, <b>MRIIRS Badminton Team </b>
 <li>1-day workshop,<b> database systems</b>  by Coding Ninjas (19th September 2019)
-<li>1-day workshop,<b> arduino </b> by MRU (2019) 
+<li>1-day workshop,<b> arduino </b> by MRU (2019)
+<li>1 Month Intership at <b>"FirstAil.com"</b> 
+<li>Campus Ambassador at <b>Coding Blocks</b>
 </ul>
 </font>
 
